
Krzysztof Lewandowski added support for multiple tariffs in the amiplus driver. Thanks Krzysztof!

Bibo added support for the itron water meter. Thanks Bibo!

Probutus added support for the heat meter Zenner Celsius C5 ISF. Thanks Probutus!

Added MicroClima heat meter.

MaxPeal helped add ANYID as a synonym for '*' when listening to any meter id.
This helps when invoking wmbusmeters from another shell and we want to avoid
escaping '*' multiple levels. Thanks Max!

Refactor driver source code structure. It is now much easier to add a new driver.

DomAtHome added support for the heat meter sharky774. Thanks DomAtHome!

Version 1.6.0: 2022-01-01

New year triggered a change to the apator162 telegram. This is now fixed.

DenysFrasinich improved the multical302 driver to handle meters configued to send MegaJoules. Thanks Denys!

Olli Salonen added support for the Zenner Minomess water meter. Thanks Olli!

Now any DLL crcs (frame A or B) are removed automatically
when telegrams are read from a simulation_... file or
passed as hex on the command line. If the DLL crc do not
check out (usually because they are not there), then the
telegram is kept as is. If the crcs are broken because
of a bad data, then the telegram will be passed on as is,
probably causing a bad parse later on.

Added multical602 heat meter.

Version 1.5.0: 2021-11-06

Close a security hole where you could trivially spoof an encrypted meter
by sending an unencrypted telegram with the same id.

Fixed a buffer overflow bug triggered by a bad variable length field at the end of a telegram.

Added support for Qundis Q heat 5.5.

Jacek27 added support for the Munia temp/hygrometer. Thanks Jacek27!

Apator162 decoding much improved.

Improved verbose logging to show if you are not in the dialout
group when trying to find dongles. Install now adds the current
user to the dialout group as well.

Added support for the Hydrocal-M3 heating/cooling meter.
Added support for the Apator uniSMART gas meter.
