@@ -158,6 +158,9 @@ echo Slower tests...
 tests/test_pipe.sh $PROG
 if [ "$?" != "0" ]; then RC="1"; fi
 
+tests/test_config_oneshot_exitafter.sh $PROG
+if [ "$?" != "0" ]; then RC="1"; fi
+
 tests/test_config_overrides.sh $PROG
 if [ "$?" != "0" ]; then RC="1"; fi
 
