@@ -1,0 +1,5 @@
+loglevel=verbose
+device=stdin:rtlwmbus
+format=json
+oneshot=true
+exitafter=2
