@@ -1,0 +1,4 @@
+name=Vatten
+driver=multical21
+id=76348799
+key=28F64A24988064A079AA2C807D6102AE
