@@ -1,0 +1,4 @@
+name=Wasser
+driver=supercom587
+id=77777777
+key=5065747220486F6C79737A6577736B69
